--- a/groups.yaml
+++ b/groups.yaml
@@ -28,16 +28,16 @@ window_sensors:
   name: Window Sensors
   icon: mdi:window-closed
   entities:
-    - binary_sensor.bonus_room_left_window
-    - binary_sensor.bonus_room_right_window
+    - binary_sensor.bonus_room_north_window
     - binary_sensor.bonus_room_small_window
+    - binary_sensor.bonus_room_south_window
     - binary_sensor.dining_room_window
-    - binary_sensor.guest_bedroom_left_window
-    - binary_sensor.guest_bedroom_right_window
+    - binary_sensor.garage_laundry_window
+    - binary_sensor.guest_bedroom_east_window
+    - binary_sensor.guest_bedroom_west_window
     - binary_sensor.kitchen_window
-    - binary_sensor.laundry_window
-    - binary_sensor.living_room_window_left
-    - binary_sensor.living_room_window_right
+    - binary_sensor.living_room_north_window
+    - binary_sensor.living_room_south_window
     - binary_sensor.master_bathroom_window
     - binary_sensor.master_bedroom_window
     - binary_sensor.office_window
@@ -54,23 +54,40 @@ batteries:
   name: Batteries
   icon: mdi:battery
   entities:
-    - sensor.bonus_room_left_window_battery
-    - sensor.bonus_room_right_window_battery
+    - sensor.back_door_battery
+    - sensor.back_porch_switch_battery
+    - sensor.bonus_room_north_window_battery
     - sensor.bonus_room_small_window_battery
+    - sensor.bonus_room_south_window_battery
+    - sensor.bonus_room_switch_battery
+    - sensor.dining_room_switch_battery
     - sensor.dining_room_window_battery
-    # - sensor.entryway_motion_sensor_battery
-    - sensor.guest_bedroom_left_window_battery
-    - sensor.guest_bedroom_right_window_battery
-    - sensor.hall_closet_door_battery
+    - sensor.entryway_switch_battery
+    - sensor.front_door_battery
+    - sensor.garage_laundry_window_battery
+    - sensor.garage_south_switch_battery
+    - sensor.garage_stairs_door_battery
+    - sensor.garage_stairs_switch_battery
+    - sensor.garage_west_switch_battery
+    - sensor.guest_bedroom_east_window_battery
+    - sensor.guest_bedroom_switch_battery
+    - sensor.guest_bedroom_west_window_battery
+    - sensor.hallway_closet_door_battery
+    - sensor.hallway_motion_sensor_battery
+    - sensor.hallway_switch_battery
+    - sensor.kitchen_switch_battery
     - sensor.kitchen_window_battery
-    - sensor.laundry_window_battery
-    - sensor.living_room_window_left_battery
-    - sensor.living_room_window_right_battery
+    - sensor.living_room_north_window_battery
+    - sensor.living_room_south_window_battery
+    - sensor.living_room_switch_battery
+    - sensor.master_bathroom_switch_battery
     - sensor.master_bathroom_window_battery
+    - sensor.master_bedroom_hallway_switch_battery
+    - sensor.master_bedroom_switch_battery
     - sensor.master_bedroom_window_battery
-    - sensor.office_closet_west_door_battery
     - sensor.office_closet_east_door_battery
-    - sensor.office_mini_button_battery
+    - sensor.office_closet_west_door_battery
+    - sensor.office_desk_switch_battery
     - sensor.office_switch_battery
     - sensor.office_window_battery
 
@@ -124,7 +141,6 @@ living_room_lights:
     - light.living_room_bulb_lamp
     - light.living_room_sofa_lightstrip
     - light.living_room_chair_lightstrip
-    - light.living_room_christmas_tree_lights
 
 dining_room_lights:
   name: Dining Room Lights
