--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.associations": {
-        "*.yaml": "home-assistant"
+        "*.yaml": "yaml"
     },
     "files.exclude": {
         ".cloud/": true,
