--- a/automations/garage.yaml
+++ b/automations/garage.yaml
@@ -1,6 +1,4 @@
-- id: '1612310974652'
-  alias: Washer has finished
-  description: ''
+- alias: Washer has finished
   use_blueprint:
     path: Sbyx/notify-or-do-something-when-an-appliance-like-a-dishwasher-or-washing-machine-finishes.yaml
     input:
@@ -10,8 +8,8 @@
       finishing_threshold: '23'
       starting_hysteresis: '2'
       actions:
-      - device_id: 7bd0159b4de701a17d961d50c7a58020
-        domain: mobile_app
-        type: notify
-        message: ''
-        title: 🧺 Washer has finished
+        - device_id: 7bd0159b4de701a17d961d50c7a58020
+          domain: mobile_app
+          type: notify
+          message: ''
+          title: 🧺 Washer has finished
