--- a/custom_components/unifiprotect/manifest.json
+++ b/custom_components/unifiprotect/manifest.json
@@ -2,11 +2,13 @@
   "domain": "unifiprotect",
   "name": "Unifi Protect",
   "documentation": "https://github.com/briis/unifiprotect",
+  "issue_tracker": "https://github.com/briis/unifiprotect/issues",
   "config_flow": true,
   "requirements": [
-    "pyunifiprotect==0.28.8"
+    "pyunifiprotect==0.29.2"
   ],
   "dependencies": [],
+  "version": "0.8.3",
   "codeowners": [
     "@briis"
   ]
