--- a/integrations/light.yaml
+++ b/integrations/light.yaml
@@ -5,3 +5,7 @@
 - platform: switch
   name: Living Room Bulb Lamp
   entity_id: switch.living_room_bulb_lamp_plug
+
+- platform: switch
+  name: House Number
+  entity_id: switch.house_number
