--- a/integrations/lovelace.yaml
+++ b/integrations/lovelace.yaml
@@ -4,3 +4,5 @@ resources:
     type: module
   - url: /hacsfiles/vertical-stack-in-card/vertical-stack-in-card.js
     type: module
+  - url: /hacsfiles/lovelace-auto-entities/auto-entities.js
+    type: module
