--- a/ui/favorites.yaml
+++ b/ui/favorites.yaml
@@ -86,14 +86,14 @@ cards:
     cards:
       - type: horizontal-stack
         cards:
-          - aspect_ratio: 56%
+          - type: picture-entity
             entity: camera.front_porch
+            aspect_ratio: 56%
             show_name: false
             show_state: false
             tap_action:
               action: url
               url_path: !secret front_porch_camera_url
-            type: picture-entity
           - aspect_ratio: 56%
             entity: camera.driveway
             tap_action:
