--- a/ui/status.yaml
+++ b/ui/status.yaml
@@ -8,11 +8,6 @@ cards:
         show_header_toggle: false
         title: People
         type: entities
-      - entities:
-          - sensor.master_bedroom_filter_life
-        show_header_toggle: false
-        title: Filters
-        type: entities
       - cards:
           - entity: sensor.processor_use
             graph: line
@@ -28,29 +23,33 @@ cards:
                 type: sensor
             type: horizontal-stack
         type: vertical-stack
+      - type: custom:auto-entities
+        card:
+          type: entities
+          title: Low Batteries
+        filter:
+          include:
+            - group: group.batteries
+              state: "< 60"
+        sort:
+          method: state
   - type: vertical-stack
     cards:
-      - card:
+      - type: 'custom:group-card'
+        group: group.door_sensors
+        card:
           show_header_toggle: false
           title: Doors
           type: entities
-        group: group.door_sensors
-        type: 'custom:group-card'
-      - card:
+      - type: 'custom:group-card'
+        group: group.window_sensors
+        card:
           show_header_toggle: false
           title: Windows
           type: entities
-        group: group.window_sensors
-        type: 'custom:group-card'
-      - card:
+      - type: 'custom:group-card'
+        group: group.closet_doors_sensors
+        card:
           show_header_toggle: false
           title: Closets
           type: entities
-        group: group.closet_doors_sensors
-        type: 'custom:group-card'
-      - card:
-          show_header_toggle: false
-          title: Batteries
-          type: entities
-        group: group.batteries
-        type: 'custom:group-card'
