--- a/secrets_ci.yaml
+++ b/secrets_ci.yaml
@@ -33,3 +33,6 @@ purpleair_url: http://example.com
 
 front_porch_url: http://example.com
 driveway_url: http://example.com
+
+schluter_username: sam@example.com
+schluter_password: secret
