--- a/configuration.yaml
+++ b/configuration.yaml
@@ -43,6 +43,7 @@ group: !include groups.yaml
 homekit: !include integrations/homekit.yaml
 input_boolean: !include integrations/input_boolean.yaml
 light: !include integrations/light.yaml
+schluter: !include integrations/schluter.yaml
 sensor: !include integrations/sensor.yaml
 weather:
 yeelight: !include integrations/yeelight.yaml
