Update HACS and add Airmega

--- a/integrations/homekit.yaml
+++ b/integrations/homekit.yaml
@@ -25,6 +25,7 @@
       - climate.voyager
       - climate.guest_bathroom
       - cover.dining_room_shades
+      - fan.airmega
       - light.garage
       - light.guest_bedroom
       - light.kitchen_recessed_overhead
