--- a/configuration.yaml
+++ b/configuration.yaml
@@ -11,5 +11,5 @@ automation: !include_dir_merge_list automations
 group: !include integrations/group.yaml
 input_boolean: !include integrations/input_boolean.yaml
 light: !include integrations/light.yaml
-scene: !include scenes.yaml
+scene: !include integrations/scene.yaml
 script: !include_dir_merge_named scripts
