--- a/configuration.yaml
+++ b/configuration.yaml
@@ -9,6 +9,7 @@ tts:
 alert: !include integrations/alert.yaml
 automation: !include_dir_merge_list automations
 group: !include integrations/group.yaml
+homekit: !include integrations/homekit.yaml
 input_boolean: !include integrations/input_boolean.yaml
 light: !include integrations/light.yaml
 scene: !include integrations/scene.yaml
